<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.WeatherDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_pressure" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_humidity" />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/visibility" />

        <TextView
            android:id="@+id/tv_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visibility"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_visibility" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_visibility"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/all" />

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_all" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_all"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speed"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_speed" />

        <TextView
            android:id="@+id/deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_speed"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/deg" />

        <TextView
            android:id="@+id/tv_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deg"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_deg" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deg"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sunrise" />

        <TextView
            android:id="@+id/tv_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunrise"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_sunrise" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunrise"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sunset" />

        <TextView
            android:id="@+id/tv_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunset"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/tv_sunset" />

        <Button
            android:id="@+id/b_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sunset"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/b_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>